Adjust time padding to avoid wrapping

--- a/src/pages/GamePage/components/GameHeader/gameHeader.css
+++ b/src/pages/GamePage/components/GameHeader/gameHeader.css
@@ -39,7 +39,7 @@
         left: 60%;
     }
     #header-stats div > span {
-        padding-left: 20px;
+        padding-left: 15px;
     }
 }
 
